--- a/Login-Register/fizzmingle.css
+++ b/Login-Register/fizzmingle.css
@@ -19,7 +19,7 @@ body {
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  background: linear-gradient(45deg, #667eea, #debeff);
+  background: linear-gradient(45deg, #333333, #F6F6F6);
   font-family: var(--font-family);
   color: var(--black);
 }
@@ -54,7 +54,8 @@ section {
   display: flex;
   align-items: center;
   margin: 0 10px;
-  padding: 10px; /* Adjusted padding for the social sign-in links */
+  padding: 10px;
+  /* Adjusted padding for the social sign-in links */
   border: 2px solid var(--white);
   background: rgba(255, 255, 255, 0.9);
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
@@ -79,6 +80,7 @@ form,
 .social-login {
   text-align: left;
 }
+
 #remember-me {
   display: flex;
   align-items: center;
@@ -101,7 +103,8 @@ input {
   font-weight: var(--font-weight-regular);
 }
 
-input[type="submit"]:hover, input[type="submit"]:active {
+input[type="submit"]:hover,
+input[type="submit"]:active {
   transform: scale(0.95);
   transition: transform 0.1s ease-in-out;
   background-color: var(--purple);
@@ -145,15 +148,17 @@ a {
   color: var(--black);
 }
 
-a:hover, a:active {
+a:hover,
+a:active {
   color: var(--purple);
 }
 
 @keyframes fadeIn {
   from {
-      opacity: 0;
+    opacity: 0;
   }
+
   to {
-      opacity: 1;
+    opacity: 1;
   }
 }
