--- a/Projects-Made/Login-Register/fizzmingle.css
+++ b/Projects-Made/Login-Register/fizzmingle.css
@@ -54,7 +54,7 @@ section {
   display: flex;
   align-items: center;
   margin: 0 10px;
-  padding: 10px; /* Adjusted padding for the social sign-in links */
+  padding: 10px;
   border: 2px solid var(--white);
   background: rgba(255, 255, 255, 0.9);
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
@@ -82,6 +82,7 @@ form,
 #remember-me {
   display: flex;
   align-items: center;
+  box-sizing: border-box;
   margin-bottom: 15px;
   color: var(--black);
   font-weight: var(--font-weight-light);
