--- a/Projects-Made/Login-Register/fizzmingle.css
+++ b/Projects-Made/Login-Register/fizzmingle.css
@@ -79,6 +79,7 @@ form,
 .social-login {
   text-align: left;
 }
+
 span {
   display: flex;
   align-items: center;
@@ -90,7 +91,13 @@ span {
 
 #r_text {
   font-weight: bold;
+  margin-left: 8px; /* Adjust the spacing between the checkbox and label */
 }
+
+input[type="checkbox"] {
+  margin-right: 8px; /* Adjust the spacing between the checkbox and label */
+}
+
 
 input {
   display: block;
