--- a/Projects-Made/Login-Register/fizzmingle.css
+++ b/Projects-Made/Login-Register/fizzmingle.css
@@ -95,7 +95,7 @@ span {
 }
 
 input[type="checkbox"] {
-  margin-right: 8px; /* Adjust the spacing between the checkbox and label */
+  margin: 0; /* Reset margin to 0 */
 }
 
 
