--- a/styles/style.css
+++ b/styles/style.css
@@ -253,6 +253,11 @@ nav {
     font-size: 30px;
 }
 
+#slideshow {
+    max-width: 100%;
+    max-height: 100%;
+}
+
 @media screen and (max-width: 768px) {
     .about-text {
         margin-top: 60px;
