--- a/styles/style.css
+++ b/styles/style.css
@@ -130,7 +130,7 @@ nav {
 /* HERO SECTION */
 .hero-section {
     color: #ffffff;
-    background: url("../images/hero_background.jpg");
+    background: url("../images/jelly-background.jpg");
     background-size: cover;
     background-position: bottom;
     width: 100%;
