--- a/styles/style.css
+++ b/styles/style.css
@@ -254,8 +254,7 @@ nav {
 }
 
 #slideshow {
-    max-width: 100%;
-    max-height: 100%;
+    max-width: 400px;
 }
 
 @media screen and (max-width: 768px) {
