--- a/styles/style.css
+++ b/styles/style.css
@@ -254,7 +254,12 @@ nav {
 }
 
 #slideshow {
-    max-height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 50%;
+    margin: 0 auto;
 }
 
 @media screen and (max-width: 768px) {
