--- a/styles/style.css
+++ b/styles/style.css
@@ -254,12 +254,7 @@ nav {
 }
 
 #slideshow {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    width: 50%;
-    margin: 0 auto;
+    float: left;
 }
 
 @media screen and (max-width: 768px) {
