--- a/styles/style.css
+++ b/styles/style.css
@@ -377,7 +377,12 @@ nav {
 /* CONTACT SECTION */
 .contact-title {
     text-align: center;
-    margin-bottom: 40px;
+    margin-bottom: 10px;
+}
+
+#contactForm p {
+    text-align: center;
+    margin-bottom: 20px;
 }
 
 #contactForm {
