--- a/styles/style.css
+++ b/styles/style.css
@@ -380,7 +380,7 @@ nav {
     margin-bottom: 10px;
 }
 
-#contactForm p {
+.contact-section p {
     text-align: center;
     margin-bottom: 20px;
 }
