--- a/styles/style.css
+++ b/styles/style.css
@@ -433,6 +433,74 @@ nav {
     }
 }
 
+/*PRICING*/
+      pricing-section {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        margin: 0;
+        background-color: #fff;
+        font-family: 'Arial', sans-serif;
+    }
+    
+    .pricing-table {
+        display: flex;
+        justify-content: space-around;
+        max-width: 900px;
+    }
+    
+    .plan {
+        text-align: center;
+        background-color: #fff;
+        padding: 20px;
+        border-radius: 8px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        width: 30%;
+        margin: 20px 0;
+        transition: transform 0.3s ease-in-out;
+    }
+    
+    .plan:hover {
+        transform: scale(1.05);
+    }
+    
+    .featured {
+        background-color: #E9A4AE;
+        color: #fff;
+    }
+    
+    .price {
+        font-size: 24px;
+        margin: 10px 0;
+    }
+    
+    ul {
+        list-style-type: none;
+        padding: 0;
+    }
+    
+    li {
+        margin: 5px 0;
+    }
+    
+    .btn {
+        display: inline-block;
+        padding: 10px 20px;
+        background-color: #E9A4AE;
+        color: #fff;
+        text-decoration: none;
+        border-radius: 5px;
+        border-color: #9F525C;
+        border: 2px;
+        margin-top: 15px;
+        transition: background-color 0.3s;
+    }
+    
+    .btn:hover {
+        background-color: #9F525C;
+    }
+
 /* FOOTER */
 .footer {
     padding: 40px 0;
