--- a/styles/style.css
+++ b/styles/style.css
@@ -433,73 +433,69 @@ nav {
     }
 }
 
-/*PRICING*/
-      pricing-section {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        margin: 0;
-        background-color: #fff;
-        font-family: 'Arial', sans-serif;
-    }
-    
-    .pricing-table {
-        display: flex;
-        justify-content: space-around;
-        max-width: 900px;
-    }
-    
-    .plan {
-        text-align: center;
-        background-color: #fff;
-        padding: 20px;
-        border-radius: 8px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        width: 30%;
-        margin: 20px 0;
-        transition: transform 0.3s ease-in-out;
-    }
-    
-    .plan:hover {
-        transform: scale(1.05);
-    }
-    
-    .featured {
-        background-color: #E9A4AE;
-        color: #fff;
-    }
-    
-    .price {
-        font-size: 24px;
-        margin: 10px 0;
-    }
-    
-    ul {
-        list-style-type: none;
-        padding: 0;
-    }
-    
-    li {
-        margin: 5px 0;
-    }
-    
-    .btn {
-        display: inline-block;
-        padding: 10px 20px;
-        background-color: #E9A4AE;
-        color: #fff;
-        text-decoration: none;
-        border-radius: 5px;
-        border-color: #9F525C;
-        border: 2px;
-        margin-top: 15px;
-        transition: background-color 0.3s;
-    }
-    
-    .btn:hover {
-        background-color: #9F525C;
-    }
+/* PRICING SECTION */
+.pricing-section {
+    padding: 100px 0;
+    background-color: var(--grey);
+    color: #ffffff;
+}
+
+.pricing-table {
+    display: flex;
+    justify-content: space-around;
+    max-width: 1100px;
+    width: 100%;
+    margin: 0 auto;
+}
+
+.plan {
+    text-align: center;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 30%;
+    margin: 20px 0;
+    transition: transform 0.3s ease-in-out;
+}
+
+.plan:hover {
+    transform: scale(1.05);
+}
+
+.featured {
+    background-color: var(--pink);
+    color: #fff;
+}
+
+.price {
+    font-size: 24px;
+    margin: 10px 0;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+li {
+    margin: 5px 0;
+}
+
+.btn {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: var(--pink);
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    margin-top: 15px;
+    transition: background-color 0.3s;
+}
+
+.btn:hover {
+    background-color: var(--d_pink);
+}
 
 /* FOOTER */
 .footer {
