--- a/styles/style.css
+++ b/styles/style.css
@@ -444,9 +444,10 @@ nav {
 
 .pricing-table {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     max-width: 900px;
-    height: 50%;
+    width: 100%;
 }
 
 .plan {
@@ -456,7 +457,6 @@ nav {
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 30%;
-    height: 100%;
     margin: 20px 0;
     transition: transform 0.3s ease-in-out;
 }
