--- a/styles/style.css
+++ b/styles/style.css
@@ -65,6 +65,12 @@ p {
     margin: 0 0 20px;
 }
 
+p ~ a {
+    text-decoration: none;
+    font-weight: bold;
+    color: var(--pink);
+}
+
 /* HEADER AND MENU */
 .header {
     padding: 30px 20px 0;
@@ -164,12 +170,6 @@ nav {
     background-color: var(--pink);
 }
 
-.hero-section p ~ a {
-    text-decoration: none;
-    font-weight: bold;
-    color: var(--pink);
-}
-
 @media screen and (max-width: 768px) {
     .hero-title {
         font-size: 90px;
@@ -257,12 +257,6 @@ nav {
 .about-text p.first-letter::first-letter {
     color: var(--pink);
     font-size: 30px;
-}
-
-.about-section a {
-    text-decoration: none;
-    font-weight: bold;
-    color: var(--pink);
 }
 
 #slideshow {
